[tool.flake8]
max-line-length = 90
ignore = 'E203, E266, E501, W503, F403, F401'
max-complexity = 18
select = 'B,C,E,F,W,T4,B9'

[tool.black]
line-length = 90
include = '\.pyi?$|rgca'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
